# teste-tecnico-quotes-selenium

./: .gitignore  Quotes.ipynb  README.md  all_quotes.json  app.py  data.json  main.py  pyproject.toml  quotes.json  requirements.txt  selenium_service.py  teste-quotes.py
demo/: web_scraping.py
demo/data/: data.json
