[tool.poetry]
name = "teste-tecnico-quotes-selenium"
version = "0.1.0"
description = ""
authors = ["Fernando Florencio <nandoflorencio13@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.4.3"
webdriver-manager = "^3.8.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
